--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     <div class="housing">
         <h2 class="visually-hidden">Boliger</h2>
         <ul class="list housing-list">
-            <li>
+            <li class="housing-item">
               <a><span class="housing-amount">22</span> Boliger i salg</a>
             </li>
-            <li>
+            <li class="housing-item">
               <a><span class="housing-amount">84</span> Boliger i utvikling</a>
             </li>
           </ul>
