--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       
     </div>
 
-    <div class="housing">
+    <div class="housing conteiner">
         <h2 class="visually-hidden">Boliger</h2>
         <ul class="list housing-list">
             <li class="housing-item">
@@ -58,18 +58,18 @@
           </ul>
     </div>
     
-    <div class="conteiner projects">
+    <div class="conteiner projects-conteiner">
       <h2 class="second-title">Prosjekter</h2>
       <ul class="projects-list list">
-        <li class="projects-item">
-          <a href="" class="projects-link">
-            <img src="" alt="" class="projects-img" />
+        <li class="project-item">
+          <a href="" class="project-link">
+            <img src="./img/project1.png" alt="house" class="projects-img" />
             <p class="project-name">Tollskogvegen II – Porsgrunn</p>
             <p class="project-date">Lansering okt 2023</p>
           </a>
         </li>
       </ul>
-      <button class="button">Se alle prosjekter <span></span></button>
+      <button class="projects-button">Se alle prosjekter <span></span></button>
     </div>
     <div class="conteiner news">
       <h2 class="second-header">Nyheter</h2>
