--- a/index.html
+++ b/index.html
@@ -64,19 +64,21 @@
         <li class="project-item">
           <a href="" class="project-link">
             <img src="./img/project1.png" alt="house" class="projects-img" />
-            <p class="project-name">Tollskogvegen II – Porsgrunn</p>
+            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
           </a>
         </li>
       </ul>
-      <button class="projects-button">Se alle prosjekter <span></span></button>
+      <button class="main-button">Se alle prosjekter 
+        <svg class="arrow-svg" width="26" height="19">
+          <use href="./svg/symbol-defs.svg#arrow" ></use></svg></button>
     </div>
-    <div class="conteiner news">
-      <h2 class="second-header">Nyheter</h2>
+    <div class="conteiner news-conteiner">
+      <h2 class="second-title">Nyheter</h2>
       <ul class="news-list list">
         <li class="news-item">
           <a href="" class="news-link">
-            <img src="" alt="" class="news-img" />
+            <img src="./img/news1.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
             <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
             <p class="news-text">
@@ -87,44 +89,44 @@
           </a>
         </li>
       </ul>
-      <button class="button">Se alle prosjekter <span></span></button>
+      <button class="main-button">Se alle prosjekter 
+        <svg class="arrow-svg" width="26" height="19">
+          <use href="./svg/symbol-defs.svg#arrow" ></use></svg></button>
     </div>
-    <footer class="footer">
+    <footer class="footer-conteiner conteiner">
       <h2 class="second-title">Kontaktinformasjon</h2>
       <ul class="contacts-list list">
         <li class="contakts-item">
-          <p>Addrese</p>
+          <p class="contacts-kind">Addrese</p>
           <address>
-            <span>Odin Eiendom</span>
-            <span>Lunderingen 1</span>
-            <span>3941 Porsgrunn</span>
-            <a href="" class="address-link">Kart</a>
+            <p>Odin Eiendom</p>
+            <p>Lunderingen 1</p>
+            <p>3941 Porsgrunn</p>
+            <a href="" class="contacts-link">Kart</a>
           </address>
         </li>
         <li class="contakts-item">
-          <p>Telefon</p>
+          <p class="contacts-kind">Telefon</p>
           <p>Ma - fre 10-16</p>
-          <a href="tel:45636260">45 63 62 60</a>
+          <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
         </li>
         <li class="contakts-item">
-          <p>Mail</p>
-          <a href="malito:kontakt@odinedom.no">kontakt@odinedom.no</a>
+          <p class="contacts-kind">Mail</p>
+          <a href="malito:kontakt@odinedom.no" class="contacts-link">kontakt@odinedom.no</a>
         </li>
       </ul>
       <div class="copyright">
         <p class="copyrigth-paragraph">Copyright 2021 © Moen Eiendom - Org nr: 918712267</p>
-        <div class="social">
-            <ul class="social-list list">
-                <li class="social-item"><a href=""><svg class="social-svg" width="21" height="33">
-                    <use href="./svg/symbol-defs.svg#facebook"></use>
-                </svg></a>
-                </li>
-                <li class="social-item"><a href=""><svg class="social-svg" width="21" height="33"><use href="./svg/symbol-defs.svg#linkedin"></use></svg></a>
-                </li>
-                <li class="social-item"><a href=""><svg class="social-svg" width="21" height="33"><use href="./svg/symbol-defs.svg#facebook"></use></svg></a>
-                </li>
-            </ul>
-        </div>
+        <ul class="social-list list">
+          <li class="social-item"><a href=""><svg class="social-svg" width="21" height="33">
+              <use href="./svg/symbol-defs.svg#facebook"></use>
+          </svg></a>
+          </li>
+          <li class="social-item"><a href=""><svg class="social-svg" width="21" height="33"><use href="./svg/symbol-defs.svg#linkedin"></use></svg></a>
+          </li>
+          <li class="social-item"><a href=""><svg class="social-svg" width="21" height="33"><use href="./svg/symbol-defs.svg#facebook"></use></svg></a>
+          </li>
+      </ul>
       </div>
     </footer>
   </body>
