--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./dist/css/main.min.css">
   </head>
   <body>
     <header class="header">
@@ -74,6 +73,41 @@
             <p class="project-date">Lansering okt 2023</p>
           </a>
         </li>
+        <li class="project-item">
+          <a href="" class="project-link">
+            <img src="./img/project2.png" alt="house" class="projects-img" />
+            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
+            <p class="project-date">Lansering okt 2023</p>
+          </a>
+        </li>
+        <li class="project-item">
+          <a href="" class="project-link">
+            <img src="./img/project3.png" alt="house" class="projects-img" />
+            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
+            <p class="project-date">Lansering okt 2023</p>
+          </a>
+        </li>
+        <li class="project-item">
+          <a href="" class="project-link">
+            <img src="./img/project4.png" alt="house" class="projects-img" />
+            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
+            <p class="project-date">Lansering okt 2023</p>
+          </a>
+        </li>
+        <li class="project-item">
+          <a href="" class="project-link">
+            <img src="./img/project5.png" alt="house" class="projects-img" />
+            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
+            <p class="project-date">Lansering okt 2023</p>
+          </a>
+        </li>
+        <li class="project-item">
+          <a href="" class="project-link">
+            <img src="./img/project6.png" alt="house" class="projects-img" />
+            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
+            <p class="project-date">Lansering okt 2023</p>
+          </a>
+        </li>
       </ul>
       <button class="main-button">Se alle prosjekter 
         <svg class="arrow-svg" width="26" height="19">
@@ -82,6 +116,66 @@
     <div class="conteiner news-conteiner">
       <h2 class="second-title">Nyheter</h2>
       <ul class="news-list list">
+        <li class="news-item">
+          <a href="" class="news-link">
+            <img src="./img/news1.png" alt="house" class="news-img" />
+            <p class="news-date">Man. 31. okt</p>
+            <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
+            <p class="news-text">
+              Vi har nå startet salget av prosjektet Strømdalspynten. 28
+              innholdsrike leiligheter sentralt beliggende på Myren og med
+              praktfull utsikt over store deler av Skien.
+            </p>
+          </a>
+        </li>
+        <li class="news-item">
+          <a href="" class="news-link">
+            <img src="./img/news1.png" alt="house" class="news-img" />
+            <p class="news-date">Man. 31. okt</p>
+            <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
+            <p class="news-text">
+              Vi har nå startet salget av prosjektet Strømdalspynten. 28
+              innholdsrike leiligheter sentralt beliggende på Myren og med
+              praktfull utsikt over store deler av Skien.
+            </p>
+          </a>
+        </li>
+        <li class="news-item">
+          <a href="" class="news-link">
+            <img src="./img/news1.png" alt="house" class="news-img" />
+            <p class="news-date">Man. 31. okt</p>
+            <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
+            <p class="news-text">
+              Vi har nå startet salget av prosjektet Strømdalspynten. 28
+              innholdsrike leiligheter sentralt beliggende på Myren og med
+              praktfull utsikt over store deler av Skien.
+            </p>
+          </a>
+        </li>
+        <li class="news-item">
+          <a href="" class="news-link">
+            <img src="./img/news1.png" alt="house" class="news-img" />
+            <p class="news-date">Man. 31. okt</p>
+            <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
+            <p class="news-text">
+              Vi har nå startet salget av prosjektet Strømdalspynten. 28
+              innholdsrike leiligheter sentralt beliggende på Myren og med
+              praktfull utsikt over store deler av Skien.
+            </p>
+          </a>
+        </li>
+        <li class="news-item">
+          <a href="" class="news-link">
+            <img src="./img/news1.png" alt="house" class="news-img" />
+            <p class="news-date">Man. 31. okt</p>
+            <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
+            <p class="news-text">
+              Vi har nå startet salget av prosjektet Strømdalspynten. 28
+              innholdsrike leiligheter sentralt beliggende på Myren og med
+              praktfull utsikt over store deler av Skien.
+            </p>
+          </a>
+        </li>
         <li class="news-item">
           <a href="" class="news-link">
             <img src="./img/news1.png" alt="house" class="news-img" />
@@ -130,7 +224,7 @@
           </li>
           <li class="social-item"><a href=""><svg class="social-svg" width="21" height="33"><use href="./svg/symbol-defs.svg#linkedin"></use></svg></a>
           </li>
-          <li class="social-item"><a href=""><svg class="social-svg" width="21" height="33"><use href="./svg/symbol-defs.svg#facebook"></use></svg></a>
+          <li class="social-item"><a href=""><svg class="social-svg" width="21" height="33"><use href="./svg/symbol-defs.svg#instagram"></use></svg></a>
           </li>
       </ul>
       </div>
