--- a/projects.html
+++ b/projects.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./dist/css/main.min.css">
   </head>
   <body>
     <header class="header">
@@ -16,7 +15,7 @@
       </a>
       <ul class="nav-list list">
         <li class="nav-item">
-          <a href="./projects.html">Prosjekter</a>
+          <a href="./projects.html" class="accent-border">Prosjekter</a>
         </li>
         <li class="nav-item"> 
           <a href="">Om oss</a>
@@ -55,6 +54,41 @@
             <p class="project-date">Lansering okt 2023</p>
           </a>
         </li>
+        <li class="project-item">
+          <a href="" class="project-link">
+            <img src="./img/project2.png" alt="house" class="projects-img" />
+            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
+            <p class="project-date">Lansering okt 2023</p>
+          </a>
+        </li>
+        <li class="project-item">
+          <a href="" class="project-link">
+            <img src="./img/project3.png" alt="house" class="projects-img" />
+            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
+            <p class="project-date">Lansering okt 2023</p>
+          </a>
+        </li>
+        <li class="project-item">
+          <a href="" class="project-link">
+            <img src="./img/project4.png" alt="house" class="projects-img" />
+            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
+            <p class="project-date">Lansering okt 2023</p>
+          </a>
+        </li>
+        <li class="project-item">
+          <a href="" class="project-link">
+            <img src="./img/project5.png" alt="house" class="projects-img" />
+            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
+            <p class="project-date">Lansering okt 2023</p>
+          </a>
+        </li>
+        <li class="project-item">
+          <a href="" class="project-link">
+            <img src="./img/project6.png" alt="house" class="projects-img" />
+            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
+            <p class="project-date">Lansering okt 2023</p>
+          </a>
+        </li>
       </ul>
     </div>
     <footer class="footer-conteiner conteiner">
@@ -88,7 +122,7 @@
           </li>
           <li class="social-item"><a href=""><svg class="social-svg" width="21" height="33"><use href="./svg/symbol-defs.svg#linkedin"></use></svg></a>
           </li>
-          <li class="social-item"><a href=""><svg class="social-svg" width="21" height="33"><use href="./svg/symbol-defs.svg#facebook"></use></svg></a>
+          <li class="social-item"><a href=""><svg class="social-svg" width="21" height="33"><use href="./svg/symbol-defs.svg#instagram"></use></svg></a>
           </li>
       </ul>
       </div>
