--- a/news.html
+++ b/news.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nyheter</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./dist/css/main.min.css">
   </head>
   <body>
     <header class="header">
@@ -22,7 +21,7 @@
           <a href="">Om oss</a>
         </li>
         <li class="nav-item">
-          <a href="./news.html">Nyheter</a>
+          <a href="./news.html" class="accent-border">Nyheter</a>
         </li>
         <li class="nav-item">
           <a href="">Kontakt</a>
@@ -78,7 +77,7 @@
           </li>
           <li class="social-item"><a href=""><svg class="social-svg" width="21" height="33"><use href="./svg/symbol-defs.svg#linkedin"></use></svg></a>
           </li>
-          <li class="social-item"><a href=""><svg class="social-svg" width="21" height="33"><use href="./svg/symbol-defs.svg#facebook"></use></svg></a>
+          <li class="social-item"><a href=""><svg class="social-svg" width="21" height="33"><use href="./svg/symbol-defs.svg#instagram"></use></svg></a>
           </li>
       </ul>
       </div>
