--- a/news.html
+++ b/news.html
@@ -28,13 +28,75 @@
         </li>
       </ul></div>
     </header>
-
+    <div class="page-title">
+      <h1 class="main-title conteiner">Nyheter</h1>
+    </div>
     <div class="conteiner news">
-      <h1 class="main-title">Nyheter</h1>
+      
       <ul class="news-list list">
         <li class="news-item">
           <a href="" class="news-link">
             <img src="./img/news1.png" alt="house" class="news-img" />
+            <p class="news-date">Man. 31. okt</p>
+            <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
+            <p class="news-text">
+              Vi har nå startet salget av prosjektet Strømdalspynten. 28
+              innholdsrike leiligheter sentralt beliggende på Myren og med
+              praktfull utsikt over store deler av Skien.
+            </p>
+          </a>
+        </li>
+        <li class="news-item">
+          <a href="" class="news-link">
+            <img src="./img/news2.png" alt="house" class="news-img" />
+            <p class="news-date">Man. 31. okt</p>
+            <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
+            <p class="news-text">
+              Vi har nå startet salget av prosjektet Strømdalspynten. 28
+              innholdsrike leiligheter sentralt beliggende på Myren og med
+              praktfull utsikt over store deler av Skien.
+            </p>
+          </a>
+        </li>
+        <li class="news-item">
+          <a href="" class="news-link">
+            <img src="./img/news3.png" alt="house" class="news-img" />
+            <p class="news-date">Man. 31. okt</p>
+            <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
+            <p class="news-text">
+              Vi har nå startet salget av prosjektet Strømdalspynten. 28
+              innholdsrike leiligheter sentralt beliggende på Myren og med
+              praktfull utsikt over store deler av Skien.
+            </p>
+          </a>
+        </li>
+        <li class="news-item">
+          <a href="" class="news-link">
+            <img src="./img/news1.png" alt="house" class="news-img" />
+            <p class="news-date">Man. 31. okt</p>
+            <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
+            <p class="news-text">
+              Vi har nå startet salget av prosjektet Strømdalspynten. 28
+              innholdsrike leiligheter sentralt beliggende på Myren og med
+              praktfull utsikt over store deler av Skien.
+            </p>
+          </a>
+        </li>
+        <li class="news-item">
+          <a href="" class="news-link">
+            <img src="./img/news2.png" alt="house" class="news-img" />
+            <p class="news-date">Man. 31. okt</p>
+            <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
+            <p class="news-text">
+              Vi har nå startet salget av prosjektet Strømdalspynten. 28
+              innholdsrike leiligheter sentralt beliggende på Myren og med
+              praktfull utsikt over store deler av Skien.
+            </p>
+          </a>
+        </li>
+        <li class="news-item">
+          <a href="" class="news-link">
+            <img src="./img/news3.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
             <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
             <p class="news-text">
