--- a/projects.html
+++ b/projects.html
@@ -5,50 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./dist/css/main.min.css">
+    <link rel="stylesheet" href="./dist/css/main.min.css" />
   </head>
   <body>
     <header class="header">
       <div class="header-conteiner conteiner">
         <a class="logo-link" href="./index.html">
-        <img class="logo-img" src="/img/Logo1.png" alt="logo"/>
-      </a>
-      <ul class="nav-list list">
-        <li class="nav-item">
-          <a href="./projects.html" class="accent-border">Prosjekter</a>
-        </li>
-        <li class="nav-item"> 
-          <a href="">Om oss</a>
-        </li>
-        <li class="nav-item">
-          <a href="./news.html">Nyheter</a>
-        </li>
-        <li class="nav-item">
-          <a href="">Kontakt</a>
-        </li>
-      </ul></div>
+          <img class="logo-img" src="/img/Logo1.png" alt="logo" />
+        </a>
+        <ul class="nav-list list">
+          <li class="nav-item">
+            <a href="./projects.html" class="accent-border">Prosjekter</a>
+          </li>
+          <li class="nav-item">
+            <a href="">Om oss</a>
+          </li>
+          <li class="nav-item">
+            <a href="./news.html">Nyheter</a>
+          </li>
+          <li class="nav-item">
+            <a href="">Kontakt</a>
+          </li>
+        </ul>
+      </div>
     </header>
 
     <div class="page-title">
       <h1 class="main-title conteiner">Prosjekter</h1>
     </div>
     <div class="conteiner projects">
-      
       <ul class="button-list">
-        <li class="button-item">
-          <button>Alle</button>
+        <li class="button-item switch-border">
+          <button class="switch-button">Alle</button>
         </li>
         <li class="button-item">
-          <button>I salg</button>
+          <button class="switch-button">I salg</button>
         </li>
         <li class="button-item">
-          <button>Kommer for salg</button>
+          <button class="switch-button">Kommer for salg</button>
         </li>
       </ul>
 
       <ul class="projects-list list">
         <li class="project-item">
-          <a href="" class="project-link">
+          <a href="./projectCard.html" class="project-link">
             <img src="./img/project1.png" alt="house" class="projects-img" />
             <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
@@ -110,21 +110,35 @@
         </li>
         <li class="contakts-item">
           <p class="contacts-kind">Mail</p>
-          <a href="malito:kontakt@odinedom.no" class="contacts-link">kontakt@odinedom.no</a>
+          <a href="malito:kontakt@odinedom.no" class="contacts-link"
+            >kontakt@odinedom.no</a
+          >
         </li>
       </ul>
       <div class="copyright">
-        <p class="copyrigth-paragraph">Copyright 2021 © Moen Eiendom - Org nr: 918712267</p>
+        <p class="copyrigth-paragraph">
+          Copyright 2021 © Moen Eiendom - Org nr: 918712267
+        </p>
         <ul class="social-list list">
-          <li class="social-item"><a href=""><svg class="social-svg" width="21" height="33">
-              <use href="./svg/symbol-defs.svg#facebook"></use>
-          </svg></a>
+          <li class="social-item">
+            <a href=""
+              ><svg class="social-svg" width="21" height="33">
+                <use href="./svg/symbol-defs.svg#facebook"></use></svg
+            ></a>
           </li>
-          <li class="social-item"><a href=""><svg class="social-svg" width="21" height="33"><use href="./svg/symbol-defs.svg#linkedin"></use></svg></a>
+          <li class="social-item">
+            <a href=""
+              ><svg class="social-svg" width="21" height="33">
+                <use href="./svg/symbol-defs.svg#linkedin"></use></svg
+            ></a>
           </li>
-          <li class="social-item"><a href=""><svg class="social-svg" width="21" height="33"><use href="./svg/symbol-defs.svg#instagram"></use></svg></a>
+          <li class="social-item">
+            <a href=""
+              ><svg class="social-svg" width="21" height="33">
+                <use href="./svg/symbol-defs.svg#instagram"></use></svg
+            ></a>
           </li>
-      </ul>
+        </ul>
       </div>
     </footer>
   </body>
