--- a/projectCard.html
+++ b/projectCard.html
@@ -29,9 +29,54 @@
         </ul>
       </div>
     </header>
+
     <div class="options-conteiner">
       <div class="conteiner">
-        <div class="carousel"></div>
+        <div class="carousel">
+          <div class="wrapper">
+            <input checked type="radio" name="slider" id="slide1" />
+            <input type="radio" name="slider" id="slide2" />
+            <input type="radio" name="slider" id="slide3" />
+            <input type="radio" name="slider" id="slide4" />
+            <input type="radio" name="slider" id="slide5" />
+
+            <div class="slider-wrapper">
+              <div class="inner">
+                <article>
+                  <div class="info top-left"></div>
+                  <img src="./img/carouselPhoto1.png" />
+                </article>
+
+                <article>
+                  <div class="info bottom-right">
+                    <h3>Cameron Highland</h3>
+                  </div>
+                  <img src="./img/carouselPhoto1.png" />
+                </article>
+              </div>
+              <!-- .inner -->
+            </div>
+            <!-- .slider-wrapper -->
+
+            <div class="slider-prev-next-control">
+              <label for="slide1"></label>
+              <label for="slide2"></label>
+              <label for="slide3"></label>
+              <label for="slide4"></label>
+              <label for="slide5"></label>
+            </div>
+            <!-- .slider-prev-next-control -->
+
+            <div class="slider-dot-control">
+              <label for="slide1"></label>
+              <label for="slide2"></label>
+              <label for="slide3"></label>
+              <label for="slide4"></label>
+              <label for="slide5"></label>
+            </div>
+            <!-- .slider-dot-control -->
+          </div>
+        </div>
         <h1 class="main-title">Tollskogvegen II – Porsgrunn</h1>
         <div class="options">
           <div class="price">
@@ -43,59 +88,55 @@
             Vallermyrene med kort vei til matbutikk og Porsgrunn sentrum. i regi
             av Moen Eiendom Salget er i gang! Bygging er besluttet!
           </p>
-          
         </div>
       </div>
     </div>
 
-    
-
     <div class="description conteiner">
-
-        <ul class="options-list conteiner">
-            <li class="table-items">
-              <svg class="options-svg" width="41" height="41">
-                <use href="./svg/symbol-defs.svg#options1"></use>
-              </svg>
-              <h5 class="options-title">Areal</h5>
-              <p class="options-text">Fra 82,1 til 100,8 kvadratmeter BRA m²</p>
-            </li>
-            <li class="table-items">
-              <svg class="options-svg" width="42" height="34">
-                <use href="./svg/symbol-defs.svg#options2"></use>
-              </svg>
-              <h5 class="options-title">Boligtype</h5>
-              <p class="options-text">Leilighet</p>
-            </li>
-            <li class="table-items">
-              <svg class="options-svg" width="42" height="34">
-                <use href="./svg/symbol-defs.svg#options3"></use>
-              </svg>
-              <h5 class="options-title">Eierform</h5>
-              <p class="options-text">Borettslag</p>
-            </li>
-            <li class="table-items">
-              <svg class="options-svg" width="38" height="38">
-                <use href="./svg/symbol-defs.svg#options4"></use>
-              </svg>
-              <h5 class="options-title">Antall rom</h5>
-              <p class="options-text">3-4</p>
-            </li>
-            <li class="table-items">
-              <svg class="options-svg" width="50" height="44">
-                <use href="./svg/symbol-defs.svg#options5"></use>
-              </svg>
-              <h5 class="options-title">Antall enheter</h5>
-              <p class="options-text">12</p>
-            </li>
-            <li class="table-items">
-              <svg class="options-svg" width="30" height="44">
-                <use href="./svg/symbol-defs.svg#options6"></use>
-              </svg>
-              <h5 class="options-title">Adresse</h5>
-              <p class="options-text">Tollskogvegen II Porsgrunn</p>
-            </li>
-          </ul>
+      <ul class="options-list">
+        <li class="table-items">
+          <svg class="options-svg" width="41" height="41">
+            <use href="./svg/symbol-defs.svg#options1"></use>
+          </svg>
+          <h5 class="options-title">Areal</h5>
+          <p class="options-text">Fra 82,1 til 100,8 kvadratmeter BRA m²</p>
+        </li>
+        <li class="table-items">
+          <svg class="options-svg" width="42" height="34">
+            <use href="./svg/symbol-defs.svg#options2"></use>
+          </svg>
+          <h5 class="options-title">Boligtype</h5>
+          <p class="options-text">Leilighet</p>
+        </li>
+        <li class="table-items">
+          <svg class="options-svg" width="42" height="34">
+            <use href="./svg/symbol-defs.svg#options3"></use>
+          </svg>
+          <h5 class="options-title">Eierform</h5>
+          <p class="options-text">Borettslag</p>
+        </li>
+        <li class="table-items">
+          <svg class="options-svg" width="38" height="38">
+            <use href="./svg/symbol-defs.svg#options4"></use>
+          </svg>
+          <h5 class="options-title">Antall rom</h5>
+          <p class="options-text">3-4</p>
+        </li>
+        <li class="table-items">
+          <svg class="options-svg" width="50" height="44">
+            <use href="./svg/symbol-defs.svg#options5"></use>
+          </svg>
+          <h5 class="options-title">Antall enheter</h5>
+          <p class="options-text">12</p>
+        </li>
+        <li class="table-items">
+          <svg class="options-svg" width="30" height="44">
+            <use href="./svg/symbol-defs.svg#options6"></use>
+          </svg>
+          <h5 class="options-title">Adresse</h5>
+          <p class="options-text">Tollskogvegen II Porsgrunn</p>
+        </li>
+      </ul>
       <div class="description-block">
         <h3 class="description-title">Litt om prosjektet</h3>
         <p class="description-text">
