--- a/contacts.html
+++ b/contacts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Nyheter</title>
     <link rel="stylesheet" href="./dist/css/main.min.css" />
   </head>
   <body>
@@ -15,7 +15,7 @@
         </a>
         <ul class="nav-list list">
           <li class="nav-item">
-            <a href="./projects.html" class="accent-border">Prosjekter</a>
+            <a href="./projects.html">Prosjekter</a>
           </li>
           <li class="nav-item">
             <a href="">Om oss</a>
@@ -24,72 +24,66 @@
             <a href="./news.html">Nyheter</a>
           </li>
           <li class="nav-item">
-            <a href="./contacts.html">Kontakt</a>
+            <a href="./contacts.html" class="accent-border">Kontakt</a>
           </li>
         </ul>
       </div>
     </header>
 
     <div class="page-title">
-      <h1 class="main-title conteiner">Prosjekter</h1>
+      <h1 class="main-title conteiner">Kontakt</h1>
     </div>
-    <div class="conteiner projects">
-      <ul class="button-list">
-        <li class="button-item switch-border">
-          <button class="switch-button">Alle</button>
-        </li>
-        <li class="button-item">
-          <button class="switch-button">I salg</button>
-        </li>
-        <li class="button-item">
-          <button class="switch-button">Kommer for salg</button>
-        </li>
-      </ul>
-
-      <ul class="projects-list list">
-        <li class="project-item">
-          <a href="./projectCard.html" class="project-link">
-            <img src="./img/project1.png" alt="house" class="projects-img" />
-            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
-            <p class="project-date">Lansering okt 2023</p>
-          </a>
-        </li>
-        <li class="project-item">
-          <a href="" class="project-link">
-            <img src="./img/project2.png" alt="house" class="projects-img" />
-            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
-            <p class="project-date">Lansering okt 2023</p>
-          </a>
-        </li>
-        <li class="project-item">
-          <a href="" class="project-link">
-            <img src="./img/project3.png" alt="house" class="projects-img" />
-            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
-            <p class="project-date">Lansering okt 2023</p>
-          </a>
-        </li>
-        <li class="project-item">
-          <a href="" class="project-link">
-            <img src="./img/project4.png" alt="house" class="projects-img" />
-            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
-            <p class="project-date">Lansering okt 2023</p>
-          </a>
-        </li>
-        <li class="project-item">
-          <a href="" class="project-link">
-            <img src="./img/project5.png" alt="house" class="projects-img" />
-            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
-            <p class="project-date">Lansering okt 2023</p>
-          </a>
-        </li>
-        <li class="project-item">
-          <a href="" class="project-link">
-            <img src="./img/project6.png" alt="house" class="projects-img" />
-            <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
-            <p class="project-date">Lansering okt 2023</p>
-          </a>
-        </li>
-      </ul>
+    <div class="conteiner">
+      <div class="contacts">
+        <ul class="list">
+          <li class="contakts-item">
+            <p class="contacts-kind">Addrese</p>
+            <address>
+              <p>Odin Eiendom</p>
+              <p>Lunderingen 1</p>
+              <p>3941 Porsgrunn</p>
+              <a href="" class="contacts-link">Kart</a>
+            </address>
+          </li>
+          <li class="contakts-item">
+            <p class="contacts-kind">Telefon</p>
+            <p>Ma - fre 10-16</p>
+            <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
+          </li>
+          <li class="contakts-item">
+            <p class="contacts-kind">Mail</p>
+            <a href="malito:kontakt@odinedom.no" class="contacts-link"
+              >kontakt@odinedom.no</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="contacts-persons">
+        <ul class="persons-list">
+          <li class="persons-item">
+            <img src="./img/person1.png" alt="man" />
+            <p>Kristoffer Moen</p>
+            <p>Innehaver/Daglig Leder</p>
+            <ul>
+              <li><a href="" class="accent-border">35 93 10 20</a></li>
+              <li>
+                <a href="" class="accent-border">Kristoffer@odin-eiendom.no</a>
+              </li>
+            </ul>
+          </li>
+          <li class="persons-item">
+            <img src="./img/person2.jpg" alt="man" />
+            <p>Kristoffer Moen</p>
+            <p>Innehaver/Daglig Leder</p>
+            <ul>
+              <li><a href="" class="accent-border">35 93 10 20</a></li>
+              <li>
+                <a href="" class="accent-border">Kristoffer@odin-eiendom.no</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
     </div>
     <footer class="footer-conteiner conteiner">
       <h2 class="second-title">Kontaktinformasjon</h2>
