--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="./news.html">Nyheter</a>
           </li>
           <li class="nav-item">
-            <a href="">Kontakt</a>
+            <a href="./contacts.html">Kontakt</a>
           </li>
         </ul>
       </div>
