--- a/news.html
+++ b/news.html
@@ -24,7 +24,7 @@
           <a href="./news.html" class="accent-border">Nyheter</a>
         </li>
         <li class="nav-item">
-          <a href="">Kontakt</a>
+          <a href="./contacts.html">Kontakt</a>
         </li>
       </ul></div>
     </header>
